manifests/ingress/controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: ip-172-31-29-35.ap-northeast-2.compute.internal
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.10.0
          args:
            - /nginx-ingress-controller
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --watch-ingress-without-class=true
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
