manifests/ingress/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: traefik
  rules:
    - host: uosludex.com
      http:
        paths:
          - path: /useraccount(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: useraccount-rest
                port:
                  number: 3000
          - path: /web3gateway(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web3gateway-rest
                port:
                  number: 3000
          - path: /upload(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: upload-rest
                port:
                  number: 3000
          - path: /purchase(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: purchase-rest
                port:
                  number: 3000
          - path: /platformadmin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: platformadmin-rest
                port:
                  number: 3000
          - path: /management(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: management-rest
                port:
                  number: 3000
---
# FrontEnd 전용 Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: uosludex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
